[package]
name = "kvm-ioctls"
version = "0.2.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Safe wrappers over KVM ioctls"
repository = "https://github.com/rust-vmm/kvm-ioctls"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0 OR MIT"

[dependencies]
libc = ">=0.2.39"
kvm-bindings = { git = "http://gitlab.alibaba-inc.com/rust-vmm/kvm-bindings.git", branch = "v2base" }

[dev-dependencies]
byteorder = ">=1.2.1"
